idf_component_register(SRCS "Bluetooth_esp32_Cpp.cpp"
                            "FreeRTOS.cpp"
                            "Cpp_Uitil.cpp"
                            "BLEDevice.cpp"
                            "BLEScan.cpp"
                            "BLEAdvertisedDevice.cpp"
                            "GeneralUtils.cpp"
                            "BLEUUID.cpp"
                            "BLEUtils.cpp"
                            "BLEClient.cpp"
                            "BLE2902.cpp"
                            "BLE2904.cpp"
                            "BLEAddress.cpp"
                            "BLEAdvertisedDevice.cpp"
                            "BLEAdvertising.cpp"
                            "BLEBeacon.cpp"
                            "BLECharacteristic.cpp"
                            "BLECharacteristicMap.cpp"
                            "BLEDescriptor.cpp"
                            "BLEDescriptorMap.cpp"
                            "BLEEddystoneTLM.cpp"
                            "BLEEddystoneURL.cpp"
                            "BLEExceptions.cpp"
                            "BLEHIDDevice.cpp"
                            "BLERemoteCharacteristic.cpp"
                            "BLERemoteDescriptor.cpp"
                            "BLERemoteService.cpp"
                            "BLESecurity.cpp"
                            "BLEServer.cpp"
                            "BLEService.cpp"
                            "BLEServiceMap.cpp"
                            "BLEValue.cpp"
			                "Task.cpp"
                    INCLUDE_DIRS ".")
